feat: upgrade to Svelte 5 (#490)
BREAKING CHANGE:
The library is upgraded to Svelte 5. Everything is backward compatible and works in Svelte 3, 4, and 5. There may be subtle breaking changes in specific edge cases though, hence the release as a new major version.

--- a/src/lib/components/modes/treemode/JSONNode.scss
+++ b/src/lib/components/modes/treemode/JSONNode.scss
@@ -190,18 +190,18 @@
   }
 
   &.jse-hovered:not(.jse-selected):not(.jse-selected-value) {
-    .jse-value-outer,
-    .jse-meta,
-    .jse-items .jse-header,
-    .jse-items .jse-contents,
-    .jse-props .jse-header,
-    .jse-props .jse-contents,
-    .jse-footer {
+    :global(.jse-value-outer),
+    :global(.jse-meta),
+    :global(.jse-items .jse-header),
+    :global(.jse-items .jse-contents),
+    :global(.jse-props .jse-header),
+    :global(.jse-props .jse-contents),
+    :global(.jse-footer) {
       background: defaults.$hover-background-color;
       cursor: defaults.$contents-cursor;
 
-      .jse-value-outer,
-      .jse-meta {
+      :global(.jse-value-outer),
+      :global(.jse-meta) {
         // since the $hover-background-color is half transparent,
         // we have to prevent it from being applied twice, else it gets a darker color
         background: none;
@@ -237,17 +237,17 @@
 
   // value selected
   &.jse-selected-value {
-    .jse-value-outer,
-    .jse-meta,
-    .jse-items .jse-header,
-    .jse-items .jse-contents,
-    .jse-props .jse-header,
-    .jse-props .jse-contents,
-    .jse-footer {
+    :global(.jse-value-outer),
+    :global(.jse-meta),
+    :global(.jse-items .jse-header),
+    :global(.jse-items .jse-contents),
+    :global(.jse-props .jse-header),
+    :global(.jse-props .jse-contents),
+    :global(.jse-footer) {
       background: defaults.$selection-background-color;
       cursor: defaults.$contents-selected-cursor;
 
-      .jse-key-outer {
+      :global(.jse-key-outer) {
         &:hover {
           background: inherit;
           cursor: inherit;
