feat: use `plaintext-only` to prevent rich-text edits when editing a value

--- a/src/lib/components/controls/EditableDiv.scss
+++ b/src/lib/components/controls/EditableDiv.scss
@@ -25,6 +25,7 @@ div.jse-editable-div {
     white-space: nowrap;
   }
 
+  &[contenteditable='plaintext-only'],
   &[contenteditable='true'] {
     outline: defaults.$edit-outline;
     background: defaults.$background-color;
