fix: layout issue of Transform modal preview error on small screens

--- a/src/lib/components/modals/TransformModal.scss
+++ b/src/lib/components/modals/TransformModal.scss
@@ -113,6 +113,11 @@
             height: 300px;
             flex: none;
           }
+
+          .jse-original-data,
+          .jse-preview-data {
+            flex: unset;
+          }
         }
       }
     }
